--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@
   --darkBlue: hsl(233, 47%, 7%);
   --desaturatedBlue: hsl(244, 38%, 16%);
   --lightViolet: hsl(277, 64%, 61%);
-  --bgViolet: hsl(277, 69%, 35%);
   --white: hsl(0, 0%, 100%);
   --paragraphWhite: hsla(0, 0%, 100%, 0.75);
   --headingsWhite: hsla(0, 0%, 100%, 0.6);
@@ -74,12 +73,12 @@ body {
 }
 
 .card-cover {
-  background-color: var(--bgViolet);
+  background-color: var(--lightViolet);
 }
 .card-cover img {
   width: 100%;
   height: 100%;
-  opacity: 0.5;
+  mix-blend-mode: multiply;
 }
 
 @media (max-width: 640px) {
