--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,7 @@
 body {
   background-color: var(--darkBlue);
   font-family: "Inter", sans-serif;
-  height: 100vh;
+  min-height: 100vh;
   display: grid;
   justify-content: center;
   align-items: center;
